--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "private": true,
   "name": "everws",
   "author": "@aj0strow",
+  "main": "index.js",
+  "license": "MIT",
   "devDependencies": {
     "mocha": "^2.3.4"
   },
