add package version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "private": true,
   "name": "everws",
+  "version": "0.0.1",
   "author": "@aj0strow",
   "main": "index.js",
   "license": "MIT",
